@@ -70,7 +70,7 @@ public class FallDetector extends Sensor {
 	}
 
 	public void setMeasuredValue(boolean value) {
-		props.put(PROP_MEASURED_VALUE, new Boolean(value));
+		props.put(PROP_MEASURED_VALUE, Boolean.valueOf(value));
 	}
 
 }
