@@ -58,6 +58,6 @@ public class GlassBreakSensor extends Sensor {
     }
 
     public void setMeasuredValue(boolean value) {
-	props.put(PROP_MEASURED_VALUE, new Boolean(value));
+	props.put(PROP_MEASURED_VALUE, Boolean.valueOf(value));
     }
 }
